# pointcloud2_normal_rviz_plugin

./: .clang-format  CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
src/: arrow.cpp  arrow.h  pix_arrow.cpp  pix_arrow.h  point_cloud2_normal_display.cpp  point_cloud2_normal_display.h  point_cloud_normal.cpp  point_cloud_normal.h  shape.cpp  shape.h
