<package>
  <name>pointcloud2_normal_rviz_plugin</name>
  <version>1.0.0</version>
  <description>RViz plugin to display normal vectors of points in a point cloud, if available.</description>
  <author email="ywang1040@ucr.edu">Yipeng Wang</author>
  <maintainer email="hteng007@ucr.edu">Hanzhe Teng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>